# EGame

./: README.md
GameSource/CCProject/: .gitignore  Assembly-CSharp.csproj.DotSettings
GameSource/CCProject/Assets/CC/Resources/: AssetBundleCollectorSetting.asset  YooAssetSettings.asset
GameSource/CCProject/Assets/CC/Scripts/Core/: CCApplication.cs  CCLauncher.cs  CCLogic.cs  CCWorldModule.cs
GameSource/CCProject/Assets/CC/UIResources/Prefabs/Sample/: Capsule.prefab  Cube.prefab  Cylinder.prefab  Plane.prefab  Quad.prefab  Sphere.prefab
GameSource/CCProject/Assets/EFramework/: EFramework.asmdef
GameSource/CCProject/Assets/EFramework/Core/Ecs/: Comp.cs  EcsEntityProvider.cs  EcsWorld.cs  EcsWorldSettings.cs  EcsWorldSystemProvider.cs  EcsWroldSystems.cs  Entity.cs  SparseSet.cs
GameSource/CCProject/Assets/EFramework/Core/Ecs/Core/: EntityKey.cs  IEntityKey.cs  ISparseCollection.cs  SparseList.cs  SparseSet.cs
GameSource/CCProject/Assets/EFramework/Core/Singleton/: SingletonProvidor.cs
GameSource/CCProject/Assets/Scenes/: SampleScene.unity
GameSource/CCProject/Assets/Settings/: URP-HighFidelity-Renderer-UI.asset  URP-HighFidelity-Renderer.asset  URP-HighFidelity.asset
GameSource/CCProject/ProjectSettings/: ProjectSettings.asset
SourceGeneratorUtil/: SourceGeneratorUtil.sln
SourceGeneratorUtil/GeneratorToolkit/: GeneratorToolkit.csproj  HelloSourceGenerator.cs
SourceGeneratorUtil/SourceGeneratorUtil/: Program.cs  SourceGeneratorUtil.csproj
elua/: CMakeLists.txt
elua/src/lua/: CMakeLists.txt
(+8 files in other folders)
